fixing stretchy image again for mobile

--- a/public/css/work.css
+++ b/public/css/work.css
@@ -20,7 +20,9 @@ h5{
   border-color: #FF4D4D;
   border-width: medium;
 }
-
+.col-sm-6 {
+  padding-bottom: 10px;
+}
 .card {
 border: 3px solid #0816C8;
 padding-left: 15px;
@@ -29,8 +31,5 @@ margin-bottom: 30px;
 }
 
 .card img {
-  border-radius: 7%;
   max-height:330px;
-  width: auto;
-  height: auto;
 }
